# ---------------------------------------------------------------------------
# SquirrelJME
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# SquirrelJME is under the Mozilla Public License Version 2.0.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# SquirrelJME base library
add_subdirectory(base)

# Third party support libraries that come from outside SquirrelJME
add_subdirectory(3rdparty)

# ScritchUI
add_subdirectory(scritchui)
