# ---------------------------------------------------------------------------
# SquirrelJME
#     Copyright (C) Stephanie Gawroriski <xer@multiphasicapps.net>
# ---------------------------------------------------------------------------
# SquirrelJME is under the Mozilla Public License Version 2.0.
# See license.mkd for licensing and copyright information.
# ---------------------------------------------------------------------------

# The SquirrelJME base library is added in the base root project and not
# by this one

# Third party support libraries that come from outside SquirrelJME
add_subdirectory(3rdparty)
